# inCode

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  inCode  inCode.pro  moc_Editor.cpp  moc_MainWindow.cpp
src/: CodeAnalyzer.cpp  CodeAnalyzer.h  Editor.cpp  Editor.h  ISymbolProvider.h  MainWindow.cpp  MainWindow.h  PhpHighlighter.cpp  SimpleSymbolIndexer.cpp  SimpleSymbolIndexer.h  main.cpp  stylesheet.qss
src/widgets/: CodeEditor.cpp  CodeEditor.h  PHPSyntaxHighlighter.cpp  PHPSyntaxHighlighter.h
